CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DATA_STRUCTURE)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/linked_list/singly/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/linked_list/circular/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/stack/inc)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linked_list/singly/src ${CMAKE_CURRENT_SOURCE_DIR}/linked_list/singly/bin)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linked_list/circular/src ${CMAKE_CURRENT_SOURCE_DIR}/linked_list/circular/bin)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/stack/src ${CMAKE_CURRENT_SOURCE_DIR}/stack/bin)

#ADD_SUBDIRECTORY(test)
